<resources>
    <string name="app_name">PhonePayment</string>
    <string name="splash_title">PayStore App</string>
    <string name="login_title">Login</string>
    <string name="login_phone_hint">Phone Number</string>
    <string name="login_password_hint">Password</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_move_to_register">No Account? Register here</string>
    <string name="register_title">Register</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_phone_hint">No. Handphone</string>
    <string name="register_password_hint">Password</string>
    <string name="register_repeat_password_hint">Repeat Password</string>
    <string name="btn_register">Register</string>
    <string name="phone_code">+62</string>
    <string name="regist_verification_title">Verification Number</string>
    <string name="verification_hint">OTP Number</string>
    <string name="btn_verif_confirm">Confirm</string>
    <string name="error_reg_name">Must contain 3-20 character (Alphabet Only)</string>
    <string name="error_reg_email">Wrong email format (ex: user@gmail.com / user@paystore.co.id)</string>
    <string name="error_reg_handphone">Must use unregistered phone number (9-12 digit)</string>
    <string name="error_reg_password">Must contain at least one digit number, upper and lower case, special character (@#$%!.,_?&amp;, no white space, and 8-20 characters)</string>
    <string name="error_reg_verPassword">Password didnt matches</string>

    <string name="paystore_balance">PayStore Balance</string>
    <string name="balance_nominal">Rp 50.000</string>
    <string name="top_up">Top-up</string>
    <string name="transfer">Transfer</string>
    <string name="history">History</string>
    <string name="payment_main_menu">Payment</string>
    <string name="pulsa">Pulsa</string>
    <string name="paket_data">Paket Data</string>
    <string name="telkom">Telkom</string>
    <string name="pbb">PBB</string>
    <string name="e_money">E-Money</string>
    <string name="hi_user">Hi, User!</string>
    
    <string name="base_url_local">http://localhost:9704/api/paystore/</string>
    <string name="base_url_heroku">https://infinite-waters-35921.herokuapp.com/api/paystore/</string>
    <string name="base_url">https://infinite-waters-35921.herokuapp.com/api/paystore/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
