<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ImageButton
        android:id="@+id/btnRegisterBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/ic_back"
        style="@style/Widget.AppCompat.Button.Borderless"/>


    <TextView
        android:id="@+id/tvTitleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:gravity="center"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRegister"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvTitleRegister"
        android:layout_marginTop="30dp"
        android:elevation="5dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:id="@+id/llRegisterForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/etRegistNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/register_name_hint"
                android:drawableEnd="@drawable/ic_user"/>

            <TextView
                android:id="@+id/tvErrorRegistNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/error_reg_name"
                android:textSize="10sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/etRegistEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/register_email_hint"
                android:drawableEnd="@drawable/ic_email"/>

            <TextView
                android:id="@+id/tvErrorRegistEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/error_reg_email"
                android:textSize="10sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRegPhoneCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/phone_code"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/etRegistHandphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/register_phone_hint"
                    android:inputType="phone"
                    android:drawableEnd="@drawable/ic_phone_number"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvErrorRegistHandphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/error_reg_handphone"
                android:textSize="10sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/etRegistPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_password"/>

            <TextView
                android:id="@+id/tvErrorRegistPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/error_reg_password"
                android:textSize="10sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/etRegistRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/register_repeat_password_hint"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_password"/>

            <TextView
                android:id="@+id/tvErrorRepeatPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/error_reg_verPassword"
                android:textSize="10sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/btn_register"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_gravity="bottom|center_horizontal"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivRegisterImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/bg_register"/>

</RelativeLayout>